# Radius-log-webserver

./: .aiexclude  .antigravity-ignore  .geminiignore  .gitattributes  AGENTS.md  Cargo.toml  DEPENDENCIES.md  README.md  build.rs  check_offline.ps1  deny.toml  dprint.json  typos.toml
.github/workflows/: codeql.yml  frontend-lint.yml  nightly.yml  release.yml  rust-ci.yml  zizmor.yml
assets/: index.html
assets/css/: bootstrap-icons.min.css  fonts.css  style.css
assets/css/themes/: aero.css  amber.css  c64.css  compact.css  cyber-tactical.css  dark.css  dos.css  dsfr.css  light.css  macos.css  macos9.css  neon.css  nes.css  onyx-glass.css  snes.css  terminal.css  win2000.css  win31.css  win95.css  xp.css
assets/js/: app.js  validate-themes.js
locales/: en.json  fr.json
scripts/: audit_iis_proxy.ps1  build_themes.js  install-service.ps1  process_w98_css.js  secure_deploy.ps1  setup-hooks.ps1  setup-hooks.sh
src/: index.html  lib.rs  main.rs  reason_codes.json
src/api/handlers/: audit.rs  logs.rs  mod.rs  stats.rs  web_ui.rs  websocket.rs
src/components/: dashboard.rs  footer.rs  header.rs  layout.rs  log_detail.rs  log_filters.rs  log_table.rs  mod.rs  modals.rs  security_audit.rs
src/core/: mod.rs  models.rs  parser.rs  reason_map.rs
src/infrastructure/: cache.rs  file_watcher.rs  mod.rs  security_audit.rs  tls.rs  win32.rs
src/utils/: logging.rs  mod.rs  security.rs
templates/: dashboard_fragment.html  index.html  log_detail.html  log_rows.html  theme_selector.html
templates/partials/: footer.html  header.html  theme_css.html
