[package]
name = "radius-log-webserver"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-web-actors = "4"
actix-files = "0.6"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
notify = "8.0.0" 
chrono = "0.4"
csv = "1.3"
quick-xml = { version = "0.39", features = ["serialize"] }
winreg = "0.55"
rand = "0.10" 
rayon = "1.10"
actix = "0.13" 
windows = { version = "0.61", features = ["Win32_System_EventLog", "Win32_Foundation", "Win32_Security_Cryptography", "Win32_System_Registry"] }
human-panic = "2.0" # Updated to fix deprecation warning
log = "0.4"
log4rs = "1.3"

[build-dependencies]
winres = "0.1"
