[package]
name = "radius-log-webserver"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-web-actors = "4"
actix-files = "0.6"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
notify = "8.0.0" 
chrono = { version = "0.4", features = ["serde"] }
csv = "1.3"
quick-xml = { version = "0.39", features = ["serialize"] }
winreg = "0.55"
rand = "0.10" 
rayon = "1.10"
actix = "0.13" 
windows = { version = "0.61", features = ["Win32_System_EventLog", "Win32_Foundation", "Win32_Security_Cryptography", "Win32_System_Registry", "Win32_System_Services"] }
human-panic = "2.0"
log = "0.4"
actix-governor = "0.6"
regex = "1.10"
anyhow = "1.0"
askama = "0.12"
askama_actix = "0.14"
parking_lot = "0.12"
dashmap = "6"
memmap2 = "0.9"
aho-corasick = "1.1"
windows-service = "0.7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-actix-web = "0.7"

[build-dependencies]
winres = "0.1"
chrono = "0.4"
vergen-git2 = { version = "9.0", features = ["build"] }
