[package]
name = "radius-log-webserver"
version = "0.1.0"
edition = "2021"
license = "MIT"
default-run = "radius-log-webserver"

[dependencies]
actix-web = "4.12.1"
actix-web-actors = "4.3.1"
actix-files = "0.6.10"
tokio = { version = "1.43.0", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
notify = "8.2.0" 
chrono = { version = "0.4.43", features = ["serde"] }
rust_xlsxwriter = "0.83"
csv = "1.4.0"
quick-xml = { version = "0.39.0", features = ["serialize"] }
winreg = "0.55.0"
# rand = "0.10.0" 
rayon = "1.11.0"
actix = "0.13.5" 
windows = { version = "0.62.0", features = ["Win32_System_EventLog", "Win32_Foundation", "Win32_Security_Cryptography", "Win32_System_Registry", "Win32_System_Services"] }
human-panic = "2.0.6"
log = "0.4.29"
actix-governor = "0.6.0"
regex = "1.12.3"
anyhow = "1.0.101"
parking_lot = "0.12.5"
dashmap = "6.1.0"
memmap2 = "0.9.9"
aho-corasick = "1.1.4"
windows-service = "0.8.0"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tracing-actix-web = "0.7.15"  # lock says 0.7.15? wait let's check
rust-embed = "8.11.0"
mime_guess = "2.0.5"
dioxus = { version = "0.7", features = ["ssr"] }
dioxus-ssr = "0.7"
web-sys = "0.3"

# Security audit
schannel = "0.1.23"
x509-parser = "0.16.0"
sha1 = "0.10"
serde_urlencoded = "0.7.1"

[build-dependencies]
winres = "0.1.12"
chrono = "0.4.43"
vergen-git2 = { version = "9.1.0", features = ["build"] }
